<resources>
    <string name="search_default_hint">Search</string>
    <string name="LearnMoreTextView_learn_more">Learn more</string>
    <string name="SpanUtil__read_more">Read more</string>
    <string name="KeyCachingService_tt_passphrase_cached">Touch to open.</string>
    <string name="KeyCachingService_passphrase_cached">Unlocked</string>
    <string name="KeyCachingService_lock">Lock</string>
    <string name="chat_draft">Draft</string>
    <string name="you">You</string>
    <string name="contact_all">All</string>
    <string name="chat_contacts">Contacts</string>
    <string name="chat_me">Me</string>
    <string name="contact_groups">Groups</string>
    <string name="contact_id">ID:</string>
    <string name="contact_uid">UID:</string>
    <string name="contact_join_at">Joined:</string>
    <string name="contact_how_you_met">How you met:</string>
    <string name="contact_met_not_recorded">Not recorded.</string>
    <string name="contact_email">Email:</string>
    <string name="contact_local_time">Local Time:</string>
    <string name="contact_removed">Contact removed</string>
    <string name="contact_forward">Forward</string>
    <string name="contact_remove">Delete Contact</string>
    <string name="contact_remove_dialog_title">Delete Contact</string>
    <string name="contact_remove_dialog_tips">All the messages will also be permanently deleted from both your and the other party’s devices.</string>
    <string name="contact_remove_dialog_yes">Delete</string>
    <string name="contact_remove_dialog_cancel">Cancel</string>
    <string name="contact_added">New contact added</string>
    <string name="contact_request">%s send you a contact request</string>
    <string name="contact_request_accept">Accept</string>
    <string name="contact_request_sent">Friend request sent</string>
    <string name="contact_friend_request">Friend request</string>
    <string name="contact_block_users">Block User</string>
    <string name="contact_block">Block</string>
    <string name="contact_block_users_tips">Block this user from messaging and calling you on %s?</string>
    <string name="contact_block_and_report">Block &amp; Report </string>
    <string name="contact_blocked">Blocked</string>
    <string name="contact_unblocked">Unblocked</string>
    <string name="contact_add_contacts">Add contacts</string>
    <string name="contact_unblock_users">Unblock</string>
    <string name="contact_unblock_operation_denied">Operation denied.You need to unblock this contact.</string>
    <string name="contact_send_a_request">Send a request</string>
    <string name="contact_offline_tips">This account has logged out and messages can not be reached.</string>
    <string name="contact_account_exception_tips">This account has been disabled and messages can not be reached.</string>
    <string name="contact_unregistered_tips">Operation denied. This account is already unregistered.</string>
    <string name="contact_non_friend_limit_tips">You can only send up to 3 messages per day to a user who is not your friend. Please wait for the other party to accept your request.</string>
    <string name="contact_info">Contact Info</string>
    <string name="contact_bot_cancel">Cancel</string>
    <string name="contact_operation_denied">Operation denied, please contact</string>
    <string name="contact_removed_messages_deleted">You removed %s. All the messages have been deleted.</string>
    <string name="contact_ignore">Ignore</string>
    <string name="contact_not_in_list">The user is not in your contact list!</string>
    <string name="chat_chats">Chats</string>
    <string name="chat_message_input_hint">Message</string>
    <string name="chat_message_input_hint_confidential">Confidential Message</string>
    <string name="chat_message_confidential_tips">Swipe left to read, swipe right to turn pages.</string>
    <string name="chat_message_action_copy">Copy</string>
    <string name="chat_message_action_copied">Copied</string>
    <string name="chat_message_action_forward">Forward</string>
    <string name="chat_message_action_voice2text">Voice To text</string>
    <string name="chat_message_action_voice2text_off">Discard Convert</string>
    <string name="chat_message_action_voice2text_tip_title">Information</string>
    <string name="chat_message_action_voice2text_tip_info">Voice-to-Text converted by Yelling server</string>
    <string name="chat_message_action_voice2text_tip_ok">OK</string>
    <string name="chat_message_action_select_multiple">Select Multiple</string>
    <string name="chat_message_action_combine_forward">Combine &amp; Forward</string>
    <string name="chat_message_action_quote">Quote</string>
    <string name="chat_message_action_reply">Reply</string>
    <string name="chat_message_action_recall">Recall</string>
    <string name="chat_message_action_download">Download</string>
    <string name="chat_message_action_save_to_note">Save</string>
    <string name="chat_message_action_more_info">More Info</string>
    <string name="chat_message_action_translate">Translate</string>
    <string name="chat_message_action_translate_off">Off</string>
    <string name="chat_message_attachment">[Attachment]</string>
    <string name="chat_message_image">[Image]</string>
    <string name="chat_message_video">[Video]</string>
    <string name="chat_message_audio">[Audio]</string>
    <string name="chat_message_confidential_message">[Message]</string>
    <string name="chat_message_contact_card">[Contact Card]</string>
    <string name="chat_message_contact_card_content" translatable="false">[Contact Card]</string>
    <string name="chat_message_chat_history">[Chat History]</string>
    <string name="chat_tap_to_view">Tap to view</string>
    <string name="chat_tap_to_download">Tap to download</string>
    <string name="chat_net_error">The request failed. Please try again</string>
    <string name="chat_message_action_resend">Resend</string>
    <string name="chat_message_action_delete">Delete</string>
    <string name="chat_state_offline">Offline</string>
    <string name="chat_state_connecting">Connecting…</string>
    <string name="chat_state_disconnecting">Disconnecting…</string>
    <string name="chat_state_auth_failed">No Longer Registered</string>
    <string name="chat_state_auth_failed_tips">This device has been logged out. Your account may have been logged in on another device. Tap to re-login.</string>
    <string name="chat_re_login">re-login?</string>
    <string name="chat_re_login_ok">OK</string>
    <string name="chat_re_login_cancel">Cancel</string>
    <string name="chat_group_name_too_long">Group name must less than or equal 64 chars.</string>
    <string name="chat_exceed_bytes_limit">Exceed 4096 bytes limit</string>
    <string name="chat_took_a_screen_shot">%s took a screenshot!</string>
    <string name="chat_favorites">Saved</string>
    <string name="chat_contact_info">Contact Info</string>
    <string name="chat_stick">Stick</string>
    <string name="chat_unstick">UnStick</string>
    <string name="chat_group_group">Group</string>
    <string name="chat_group_groups">Groups</string>
    <string name="chat_at_group_members">Group Members</string>
    <string name="chat_at_tips">&#160;&#160;-&#160;&#160;Users will be notified</string>
    <string name="chat_at_other">Other contacts</string>
    <string name="chat_at_other_tips">&#160;&#160;-&#160;&#160;Users will NOT be notified</string>
    <string name="chat_at_all">All</string>
    <string name="chat_list_at_you">[@You]</string>
    <string name="chat_list_at_all">[@All]</string>
    <string name="chat_status_sending">Sending</string>
    <string name="chat_status_sent">Sent</string>
    <string name="chat_status_fail">Fail</string>
    <string name="chat_emoji_reaction">Emoji Reaction</string>
    <string name="chat_emoji_most_use">Most use</string>
    <string name="chat_emoji_other">Others</string>
    <string name="chat_contact_card">Contact Card</string>
    <string name="chat_original_message_not_found">Original message not found</string>
    <string name="chat_message_detail_title">Message</string>
    <string name="chat_message_read">Read</string>
    <string name="chat_message_unread">Unread</string>
    <string name="chat_message_file_name">File Name</string>
    <string name="chat_message_sender">Sender</string>
    <string name="chat_translating">Translating…</string>
    <string name="chat_speech_to_text">Converting…</string>
    <string name="chat_speech_to_text_fail">Unable to convert to text</string>
    <string name="chat_speech_to_text_isblank">No text recognized</string>
    <string name="chat_translated_by">Translated by %s</string>
    <string name="chat_translate_fail">Translation failed</string>
    <string name="chat_attachment_load_fail">Load failed, Please try again.</string>
    <string name="chat_emergency_case" translatable="false">You have an emergency case, please contact %s</string>
    <string name="chat_confidential_can_not_select">Confidential message cannot be selected</string>
    <string name="chat_action_photo">Photos</string>
    <string name="chat_action_contact">Contact</string>
    <string name="chat_action_file">File</string>
    <string name="chat_action_call">Call</string>
    <string name="chat_action_newcall">Video Call</string>
    <string name="chat_action_confidential_mode">Confidential\nmode</string>
    <string name="chat_action_mention">Mention</string>
    <string name="chat_voice_hold_to_talk">Hold to talk</string>
    <string name="chat_voice_release_to_send">Release to send</string>
    <string name="chat_voice_release_to_cancel">Release to Cancel</string>
    <string name="chat_voice_recording_too_short">Recording too short</string>
    <string name="chat_voice_recording_will_stop">Recording will stop in %d seconds</string>
    <string name="group_leave_leave">Leave</string>
    <string name="group_leave_cancel">Cancel</string>
    <string name="group_disband_disband">Disband</string>
    <string name="me_delete_account">Delete Account</string>
    <string name="me_delete_account_tips1">This will completely delete all your data on both client and server, such as your profile, contacts, and messages, and they will never be recovered.</string>
    <string name="me_delete_account_tips2">To confirm, please enter %1$s in the box below.</string>
    <string name="me_delete">Delete</string>
    <string name="chat_select_dialog_close">Close</string>
    <string name="chat_select_dialog_multiple">Multiple</string>
    <string name="select_chat">Select Chat</string>
    <string name="meetings_action_save">Save</string>
    <string name="meetings_action_cancel">Cancel</string>
    <string name="duration_selection_15_mins">15 minutes</string>
    <string name="duration_selection_30_mins">30 minutes</string>
    <string name="duration_selection_45_mins">45 minutes</string>
    <string name="duration_selection_1_hr">1 hour</string>
    <string name="duration_selection_2_hrs">2 hours</string>
    <string name="duration_selection_4_hrs">4 hours</string>
    <string name="duration_selection_8_hrs">8 hours</string>
    <string name="duration_selection_10_hrs">10 hours</string>
    <string name="duration_selection_12_hrs">12 hours</string>
    <string name="duration_selection_24_hrs">1 day</string>
    <string name="duration_selection_48_hrs">2 days</string>
    <string name="event_label_title">Title</string>
    <string name="event_label_link">Link</string>
    <string name="event_attachment_hint_paste_url_here">Paste URL here</string>
    <string name="event_attachment_hint_enter_a_name">Enter a name</string>
    <string name="search_no_results_found">No results found</string>
    <string name="QualitySelectorBottomSheetDialog__standard">Standard\nFaster, less data</string>
    <string name="QualitySelectorBottomSheetDialog__high">High\nSlower, more data</string>
    <string name="QualitySelectorBottomSheetDialog__media_quality">Media quality</string>
</resources>