<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/contact_block_users"
        android:textColor="@color/t.primary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_block_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/contact_block_users_tips"
        android:textColor="@color/t.secondary"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/contact_block"
        android:textColor="@color/t.error"
        android:textSize="16sp" />


    <!--    <androidx.appcompat.widget.AppCompatTextView-->
    <!--        android:id="@+id/tv_block_and_report"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:gravity="center"-->
    <!--        android:padding="16dp"-->
    <!--        android:text="@string/contact_block_and_report"-->
    <!--        android:textColor="@color/t.error"-->
    <!--        android:textSize="16sp" />-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/group_leave_cancel"
        android:textColor="@color/t.primary"
        android:textSize="16sp" />

</LinearLayout>