<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg1"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="Overdraw">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_back"
        android:layout_width="48dp"
        android:layout_height="52dp"
        android:background="@null"
        android:padding="12dp"
        android:src="@drawable/chative_ic_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/t.primary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:text="@string/me_delete_account"
        android:textColor="@color/t.primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ib_back"
        app:layout_constraintLeft_toRightOf="@+id/ib_back"
        app:layout_constraintTop_toTopOf="@+id/ib_back" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_tips1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/me_delete_account_tips1"
        android:textColor="@color/t.primary"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_tips2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        tools:text="@string/me_delete_account_tips2"
        android:textColor="@color/t.primary"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tips1" />


    <com.difft.android.base.widget.DifftClearableInputView
        android:id="@+id/et_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/chat_contact_profile_name"
        app:dsi_autoFocus="true"
        app:dsi_containerColor="@android:color/transparent"
        app:dsi_contentPaddingStart="16dp"
        app:dsi_height="48dp"
        app:dsi_maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tips2" />

    <com.difft.android.base.widget.ChativeButton
        android:id="@+id/btn_done"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/me_delete"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_account" />


</androidx.constraintlayout.widget.ConstraintLayout>
