<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:nestedScrollingEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/line"
        app:layout_constraintBottom_toTopOf="@+id/cl_tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <!--        <View-->
        <!--            android:id="@+id/iv_tab_bg"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:background="@color/bottom_tab_blur_bg"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->

        <com.difft.android.views.IndexIndicator
            android:id="@+id/indicatorview_chats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/ic_index_activity_chat"
            android:text="@string/chat_chats"
            android:textColor="@color/color_index_activity_index_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/indicatorview_contacts"
            app:layout_constraintStart_toStartOf="parent" />

        <com.difft.android.views.IndexIndicator
            android:id="@+id/indicatorview_contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_index_activity_contact"
            android:text="@string/chat_contacts"
            android:textColor="@color/color_index_activity_index_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/indicatorview_me"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/indicatorview_chats" />

        <com.difft.android.views.IndexIndicator
            android:id="@+id/indicatorview_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/ic_index_activity_me"
            android:text="@string/chat_me"
            android:textColor="@color/color_index_activity_index_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/indicatorview_contacts" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>